chapter 4 one line per sentence

--- a/Sections/11_Chapter_4.Rmd
+++ b/Sections/11_Chapter_4.Rmd
@@ -16,7 +16,11 @@ Building on some of the existing bioinformatic approaches described above, we de
 
 ## Methods
 
-DNAm data was obtained from the data repository GEO for 13 placental studies, 3 of which were from our own lab (Table \@ref(tab:ch4tab1)). These included studies of acute chorioamnionitis (dataset 1), preeclampsia (datasets 2, 3, 12, 13), neural tube defects (dataset 4), recurrent pregnancy loss (dataset 5), assisted reproductive technologies (dataset 6), early gestation (dataset 7, 10), neurobehavior of newborns (dataset 8), arsenic exposure (dataset 9), and extremely early gestation preterm birth (dataset 11). Decidua and maternal blood samples from additional dataset GSE74738 were included for methylome-wide principal components analysis (PCA). All studies had collected 1-4 sites of chorionic villi from the fetal facing side of the placenta, which is done to avoid contaminating maternal tissue. DNAm data was normalized with BMIQ and noob; and filtered for poor quality, cross-hybridizing, and probes with nearby SNPs according to the 2021 June 15th update of the original Zhou 2017 DNAm annotation [@zhou2017].
+DNAm data was obtained from the data repository GEO for 13 placental studies, 3 of which were from our own lab (Table \@ref(tab:ch4tab1)). 
+These included studies of acute chorioamnionitis (dataset 1), preeclampsia (datasets 2, 3, 12, 13), neural tube defects (dataset 4), recurrent pregnancy loss (dataset 5), assisted reproductive technologies (dataset 6), early gestation (dataset 7, 10), neurobehavior of newborns (dataset 8), arsenic exposure (dataset 9), and extremely early gestation preterm birth (dataset 11). 
+Decidua and maternal blood samples from additional dataset GSE74738 were included for methylome-wide principal components analysis (PCA). 
+All studies had collected 1-4 sites of chorionic villi from the fetal facing side of the placenta, which is done to avoid contaminating maternal tissue. 
+DNAm data was normalized with BMIQ and noob; and filtered for poor quality, cross-hybridizing, and probes with nearby SNPs according to the 2021 June 15th update of the original Zhou 2017 DNAm annotation [@zhou2017].
 
 ```{r echo=FALSE, results='asis'}
     options(knitr.kable.NA = '')
@@ -25,7 +29,8 @@ DNAm data was obtained from the data repository GEO for 13 placental studies, 3 
 ### Identifying mixing of genetically distinct DNA samples
 
 To quantify the amount of mixing of genetically distinct DNA in each sample, a mixture model was fit to the 59 SNPs on the 450k/EPIC array using the R package ewastools [@heiss2018].
-Mixing of genotypes is indicated by SNP measurements with a high probability for the "outlier" distribution (referred to as the "P(outlier)" value), which corresponds to measurements that deviate from the 3 possible genotypes. P(outlier) values range from 0 to 1, and increases with mixing of distinct genotypes (e.g. fetal and maternal DNA).
+Mixing of genotypes is indicated by SNP measurements with a high probability for the "outlier" distribution (referred to as the "P(outlier)" value), which corresponds to measurements that deviate from the 3 possible genotypes. 
+P(outlier) values range from 0 to 1, and increases with mixing of distinct genotypes (e.g. fetal and maternal DNA).
 
 ### Cell composition outliers
 
@@ -64,7 +69,12 @@ kableExtra::kbl(
 
 ## Results
 
-There was variability in estimated genotype mixing between studies (Figure \@ref(fig:ch4fig1)A), however a proportion of datasets showed a number of chorionic villi samples with a high P(outlier) value (Table \@ref(tab:ch4tab1)). Due to the proximity of maternal tissue during chorionic villi sampling, we hypothesize that much of the observed genotype mixing can be explained by the presence of maternal cells, either from sample processing or from biological processes such as inflammation. We noted the number of samples with P(outlier) values greater than 0.15 for each dataset in Table \@ref(tab:ch4tab1). However, other factors can contribute to high P(outlier) values, such as data quality and non-maternal sample contamination (e.g. unintentional mixing of placental samples). We found that samples that failed 1 or more Illumina data quality control checks were overall generally low (Figure \@ref(fig:ch4fig1)B), which is unsurprising given that most studies perform at minimum some baseline data processing and quality control. However, in 3 out of 13 datasets, samples that failed control checks showed statistically significantly higher P(outlier) values (Figure \@ref(fig:figc1)A), and in two datasets, 5 and 6, the number of samples that failed at least one control check was a large proportion of the dataset -- 6/6 (100%) for dataset 5, and 32/88 (36%) (Table \@ref(tab:ch4tab2)). However, we note that Illumina data quality control checks are fairly specific and each of 27 control checks measures a different aspect of DNAm signal quality; as others have also noted, even if samples fail some Illumina controls, other measures of DNAm data quality can appear fine [@heiss2018].
+There was variability in estimated genotype mixing between studies (Figure \@ref(fig:ch4fig1)A), however a proportion of datasets showed a number of chorionic villi samples with a high P(outlier) value (Table \@ref(tab:ch4tab1)). 
+Due to the proximity of maternal tissue during chorionic villi sampling, we hypothesize that much of the observed genotype mixing can be explained by the presence of maternal cells, either from sample processing or from biological processes such as inflammation. 
+We noted the number of samples with P(outlier) values greater than 0.15 for each dataset in Table \@ref(tab:ch4tab1). However, other factors can contribute to high P(outlier) values, such as data quality and non-maternal sample contamination (e.g. unintentional mixing of placental samples). 
+We found that samples that failed 1 or more Illumina data quality control checks were overall generally low (Figure \@ref(fig:ch4fig1)B), which is unsurprising given that most studies perform at minimum some baseline data processing and quality control. 
+However, in 3 out of 13 datasets, samples that failed control checks showed statistically significantly higher P(outlier) values (Figure \@ref(fig:figc1)A), and in two datasets, 5 and 6, the number of samples that failed at least one control check was a large proportion of the dataset -- 6/6 (100%) for dataset 5, and 32/88 (36%) (Table \@ref(tab:ch4tab2)). 
+However, we note that Illumina data quality control checks are fairly specific and each of 27 control checks measures a different aspect of DNAm signal quality; as others have also noted, even if samples fail some Illumina controls, other measures of DNAm data quality can appear fine [@heiss2018].
 However, samples that failed quality control only accounted for a proportion of samples with high P(outlier) values, leaving the possibility that genotype mixing could be occurring in the remainder of the samples.
 
 <!-- INSERT FIGURE 1 -->
@@ -88,7 +98,15 @@ kableExtra::kbl(
 
 To determine what proportion of high P(outlier) placental chorionic villi samples were contaminated with maternal cells, we performed several other analyses based on DNAm variation.
 
-Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019] . In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure \@ref(fig:ch4fig2)A). We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Figure \@ref(fig:figc2)A). We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure \@ref(fig:ch4fig2)A, Table \@ref(tab:ch4tab1)). We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure \@ref(fig:ch4fig2)B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure \@ref(fig:ch4fig2)C). Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure \@ref(fig:ch4fig2)C). These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure \@ref(fig:ch4fig2)D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
+Wan 2019 used a PCA based approach that identified a set of chorionic villi samples that clustered near maternal blood and decidua, indicating that contaminated placental samples show a globally altered methylation profile that was increasingly similar to the contaminating tissues [@wan2019]. 
+In this study, we performed a modified version of PCA, where only highly tissue-specific (maternal blood vs villi, decidua vs villi) CpG sites were used. 
+We found that PCA using the top 500 hypo- and hyper- methylated CpGs between villi and either maternal blood or decidua (2x tissues = 2000 CpGs total) resulted in the first principal component PC1 (94% variance explained) being able to separate placental and maternal samples (Figure \@ref(fig:ch4fig2)A). 
+We found this tissue-specific approach to be more sensitive than using PCA on all CpGs (Figure \@ref(fig:figc2)A). 
+We labelled placental chorionic villi samples based on how many standard deviations (SD) away from the chorionic villi mean on PC1, and towards decidua and maternal blood samples (Figure \@ref(fig:ch4fig2)A, Table \@ref(tab:ch4tab1)). 
+We found that PC1 was positively associated (p\<0.001, reference category: "x \< mean") with high P(outlier) values (Figure \@ref(fig:ch4fig2)B), indicating that more maternal tissue-like DNAm profiles in placental chorionic villi samples had correspondingly higher genotype mixing. Treating PC1 as a continuous variable, a linear model between P(outlier) versus PC1 was statistically significant (p\<0.001, slope = 3.26, Figure \@ref(fig:ch4fig2)C). 
+Interestingly, we observed a concave shape to the nonlinear fit using the "LOESS" regression option in ggplot2). 
+This "increasing and then decreasing" relationship of P(outlier) is consistent with a model of genotype mixing, where after a sample becomes more than 50% contamination, the contaminant becomes the primary component of the sample and P(outlier) will start to decrease. More data is needed, however, as two extreme outliers drive the decreasing side of this relationship (Figure \@ref(fig:ch4fig2)C). 
+These two outlier samples belonged to dataset 11, and displayed a cell composition profile consistent with high blood contamination (increased nucleated red blood cells and Hofbauer cells, Figure \@ref(fig:ch4fig2)D), which was estimated from DNAm-based placental cell deconvolution [@teschendorff2017; @yuan2021; @houseman2012].
 These findings support that tissue-specific clustering based on PCA can be a highly useful approach to identifying tissue-specific contamination.
 
 <!-- INSERT FIGURE 2 -->
