ch4 update methods

--- a/References/references.bib
+++ b/References/references.bib
@@ -2439,3 +2439,17 @@ PMCID: PMC5097126}
 	note = {tex.ids= xuInsightsEpigeneticPatterns2021a},
 	langid = {en}
 }
+
+@article{bell2019,
+	title = {DNA methylation aging clocks: challenges and recommendations},
+	author = {{Bell}, {Christopher G.} and {Lowe}, {Robert} and {Adams}, {Peter D.} and {Baccarelli}, {Andrea A.} and {Beck}, {Stephan} and {Bell}, {Jordana T.} and {Christensen}, {Brock C.} and {Gladyshev}, {Vadim N.} and {Heijmans}, {Bastiaan T.} and {Horvath}, {Steve} and {Ideker}, {Trey} and {Issa}, {Jean-Pierre J.} and {Kelsey}, {Karl T.} and {Marioni}, {Riccardo E.} and {Reik}, {Wolf} and {Relton}, {Caroline L.} and {Schalkwyk}, {Leonard C.} and {Teschendorff}, {Andrew E.} and {Wagner}, {Wolfgang} and {Zhang}, {Kang} and {Rakyan}, {Vardhman K.}},
+	year = {2019},
+	month = {11},
+	date = {2019-11-25},
+	journal = {Genome Biology},
+	pages = {249},
+	volume = {20},
+	number = {1},
+	doi = {10.1186/s13059-019-1824-y},
+	url = {https://doi.org/10.1186/s13059-019-1824-y}
+}
