--- a/Sections/15_Appendix_C.Rmd
+++ b/Sections/15_Appendix_C.Rmd
@@ -30,9 +30,9 @@ knitr::include_graphics(here::here('Images', 'appendix-c', 'Figure S3.pdf'))
 
 \captionsetup{width=7in}
 
-```{r tabc1, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
-readxl::read_csv(here::('Tables', 'appendix-c', 'Table S1.csv')) %>%
+```{r tabc1, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+readxl::read_csv(here::here('Tables', 'appendix c', 'Table S1.csv')) %>%
   kableExtra::kbl(
   booktabs = TRUE,
-  caption = 'Title. Caption.')
+  caption = 'Number of samples that failed quality control checks per dataset.')
 ```
